Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjObjectField.quorum
class Main
    Object v
    Boolean t
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(Boolean var)
    end
end
